CSS updted up to the main container

--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,19 @@
-<html></html>
-  <head>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Exercici_1</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
 
+<div class="father_container">
     <header>
         <div class="navbar_container">
-            <div class="navbar_logo">.logo</div>
-            <div class="navbar_menu">.nav</div>
-            <div class="navbar_social">.social</div>
+            <div class="navbar navbar_logo">.logo</div>
+            <div class="navbar navbar_menu">.nav</div>
+            <div class="navbar navbar_social">.social</div>
         </div>
 
         <div class="banner_container">
@@ -18,10 +23,10 @@
 
     <main>
         <div class="main_leftContainer">
-            <article class="article_blog">.article</article>
-            <article class="article_blog">.article</article>
-            <article class="article_blog">.article</article>
-            <article class="article_blog">.article</article>
+            <article class="articles article_blog">.article</article>
+            <article class="articles article_blog">.article</article>
+            <article class="articles article_blog">.article</article>
+            <article class="articles article_blog">.article</article>
             <article class="article_nav">.navegacion</article>
         </div>
 
@@ -35,6 +40,7 @@
     <footer>
         <div class="footer_container">.pie</div>
     </footer>
-
+    
+</div>
   </body>
 </html>
