CSS finished. **PENDING MEDIA QUERIES**

--- a/Index.html
+++ b/Index.html
@@ -27,12 +27,12 @@
             <article class="articles article_blog">.article</article>
             <article class="articles article_blog">.article</article>
             <article class="articles article_blog">.article</article>
-            <article class="article_nav">.navegacion</article>
+            <article class="articles article_nav">.navegacion</article>
         </div>
 
         <div class="main_rightContainer">
             <article class="mainRight_publi">.publicidad</article>
-            <article class="mainRight_publi">.publicidad</article>
+            <article class="mainRight_publi publiDos">.publicidad</article>
         </div>
 
     </main>
@@ -40,7 +40,7 @@
     <footer>
         <div class="footer_container">.pie</div>
     </footer>
-    
+
 </div>
   </body>
 </html>
