Updated header with format&icons

--- a/Nivell_2/Index2.html
+++ b/Nivell_2/Index2.html
@@ -4,16 +4,31 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Exercici_1</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles2.css">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   </head>
   <body>
 
 <div class="father_container">
     <header>
         <div class="navbar_container">
-            <div class="navbar navbar_logo">.logo</div>
-            <div class="navbar navbar_menu">.nav</div>
-            <div class="navbar navbar_social">.social</div>
+            <div class="navbar navbar_logo">
+                <img src="images/logo.png" width="80px" height="80px" alt="logo-image" title="image-logo">
+            </div>
+            <div class="navbar navbar_menu">
+                <a  href="#"><i class="fa-solid fa-house"></i> INICIO</a>
+                <a  href="#"><i class="fa-solid fa-map-location-dot"></i> RUTAS</a>
+                <a  href="#"><i class="fa-solid fa-square-h"></i> HOTELES</a>
+                <a  href="#"><i class="fa-solid fa-plane"></i> VUELOS</a>
+                <a  href="#"><i class="fa-solid fa-envelope"></i> CONTACTO</a>
+            </div>
+            
+            <div class="navbar navbar_social">
+                <a href="#" class="fa-brands fa-square-facebook"></a>
+                <a href="#" class="fa-brands fa-twitter"></a>
+            </div>
         </div>
 
         <div class="banner_container">
@@ -31,8 +46,11 @@
         </div>
 
         <div class="main_rightContainer">
-            <article class="mainRight_publi">.publicidad</article>
-            <article class="mainRight_publi publiDos">.publicidad</article>
+            <article class="mainRight_publi">Something</article>
+            <article class="mainRight_publi publiDos">Lorem ipsum dolor sit, 
+                amet consectetur adipisicing elit. Commodi aperiam quidem numquam, 
+                est, quia a ratione, accusamus quos rerum ea sed. Voluptate asperiores 
+                aliquam incidunt aut tenetur voluptatum illum laboriosam?</article>
         </div>
 
     </main>
