Updated CSS up to footer **PENDING MEDIA QUERY REVIEW

--- a/Nivell_2/Index2.html
+++ b/Nivell_2/Index2.html
@@ -127,7 +127,7 @@
     </main>
 
     <footer>
-        <div class="footer_container">.pie</div>
+        <div class="footer_container">&copy; 2021 Japan Tourism</div>
     </footer>
 
 </div>
