--- a/Nivell_2/Index2.html
+++ b/Nivell_2/Index2.html
@@ -14,9 +14,9 @@
 <div class="father_container">
     <header>
         <div class="navbar_container">
-            <div class="navbar navbar_logo">
-                <img src="images/logo.png" width="80px" height="80px" alt="logo-image" title="image-logo">
-            </div>
+            <!-- <div class="navbar navbar_logo"> -->
+                <img src="images/logo.png" alt="logo-image" title="image-logo" class="logo">
+            <!-- </div> -->
             <div class="navbar navbar_menu">
                 <a  href="#"><i class="fa-solid fa-house"></i> INICIO</a>
                 <a  href="#"><i class="fa-solid fa-map-location-dot"></i> RUTAS</a>
